# plutus

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: plutus.service
src/plutus_bot/: __init__.py  __main__.py  app.py  config.py  db.py  formatting.py  states.py
