[project]
name = "plutus-bot"
version = "0.1.0"
description = "Private Telegram bot for splitting couple expenses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22,<4",
    "python-dotenv>=1.1,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
